# KuruEngine2

./: .gitignore  CMakeLists.txt  README.md
CMakeTests/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
doc/: doxyfile
include/kuru2/: kuru_export.h  util.h
src/: CMakeLists.txt  util.cpp
test/: CMakeLists.txt  TestGeom.cpp
